---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: return_type.md - Function return type - Invalid implicit return type always None
mdtest path: crates/ty_python_semantic/resources/mdtest/function/return_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | # error: [invalid-return-type]
2 | def f() -> int:
3 |     print("hello")
```

# Diagnostics

```
error[invalid-return-type]: Function always implicitly returns `None`, which is not assignable to return type `int`
 --> src/mdtest_snippet.py:2:12
  |
2 | def f() -> int:
  |            ^^^
  |
info: Consider changing the return annotation to `-> None` or adding a `return` statement

```
